--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "tailwindcss": "3.4.13",
     "typescript": "5.6.2",
     "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "postcss-import": "^16.1.0"
   }
 }
