--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@prisma/client": "^5.3.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@radix-ui/themes": "^3.1.4",
     "@types/node": "22.7.3",
     "@types/react": "18.3.9",
